--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,15 @@ version: "3.7"
 
 services:
   ase-server:
-    image: sybase/server:latest
+    image: blieusong/sybase-ase:latest
     hostname: ase-server
     working_dir: /home/sybase
     volumes:
-      - $HOME/sybase/data:/data
-      - $HOME/sybase/ase:/home/sybase/ase
-    networks:
-      sybase-bridge:
-
+      - sybase-data:/data
+    ports:
+      - 5000:5000
     tty: true
     entrypoint: "/home/sybase/bin/entrypoint.sh"
 
-networks:
-  sybase-bridge:
-    external: 
-      name: sybase-bridge
+volumes:
+  sybase-data:
