--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   ase-server:
-    image: blieusong/sybase-ase:latest
+    image: blieusong/ase-server:latest
     hostname: ase-server
     working_dir: /home/sybase
     volumes:
